se complentan sugerencias de codigo en todos los modulos